# de-coding-challenge-js

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.ipynb
github_pipeline/: assets.py  definitions.py  jobs.py  resources.py  utils.py
github_pipeline/assets/: github_data.py  report.py
github_pipeline/resources/: __init__.py  gh_resource.py  io_manager_factories.py  repositories.yaml  s3_json_io_manager.py  s3_md_io_manager.py
github_pipeline/utils/: report.py
